--- a/Instagram2.0/Base.lproj/Main.storyboard
+++ b/Instagram2.0/Base.lproj/Main.storyboard
@@ -8,7 +8,7 @@
         <!--Login View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="LoginViewController" customModule="Instagram2_0" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="LoginViewController" customModule="Instagram2" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="y3c-jy-aDJ"/>
                         <viewControllerLayoutGuide type="bottom" id="wfy-db-euE"/>
@@ -48,17 +48,91 @@
                     <connections>
                         <outlet property="passwordField" destination="blC-JY-rWj" id="Sxk-jH-QsU"/>
                         <outlet property="usernameField" destination="AET-6N-vI6" id="vGX-sh-hn1"/>
-                        <segue destination="lyj-GL-pES" kind="presentation" identifier="loginSegue" id="Bj7-PP-Glg"/>
+                        <segue destination="J8p-wi-KXT" kind="presentation" identifier="loginSegue" id="Bj7-PP-Glg"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="305" y="389"/>
         </scene>
-        <!--View Controller-->
+        <!--Capture-->
+        <scene sceneID="y68-LB-Z0r">
+            <objects>
+                <viewController id="1qO-IR-TQv" customClass="CaptureViewController" customModule="Instagram2" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="aBT-iW-sIF"/>
+                        <viewControllerLayoutGuide type="bottom" id="xAk-M8-O10"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="rze-uv-utE" customClass="Cap">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="mc1-hD-zaE">
+                                <rect key="frame" x="10" y="66" width="300" height="186"/>
+                                <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
+                                <gestureRecognizers/>
+                                <connections>
+                                    <outletCollection property="gestureRecognizers" destination="djj-hS-11F" appends="YES" id="SYx-EU-UWV"/>
+                                </connections>
+                            </imageView>
+                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" fixedFrame="YES" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="Gmg-jl-4NN">
+                                <rect key="frame" x="10" y="273" width="300" height="132"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <color key="textColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
+                            </textView>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="tKG-1B-xn9">
+                                <rect key="frame" x="145" y="446" width="31" height="30"/>
+                                <state key="normal" title="Post"/>
+                                <connections>
+                                    <action selector="onPostPress:" destination="1qO-IR-TQv" eventType="touchUpInside" id="Mh9-1J-h22"/>
+                                </connections>
+                            </button>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    </view>
+                    <tabBarItem key="tabBarItem" title="Capture" id="ld1-6u-pPJ"/>
+                    <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina4"/>
+                    <connections>
+                        <outlet property="captionTextView" destination="Gmg-jl-4NN" id="Ib4-WX-VR3"/>
+                        <outlet property="photoImageView" destination="mc1-hD-zaE" id="8KM-Z4-EHC"/>
+                        <segue destination="lyj-GL-pES" kind="show" identifier="homeSegue" id="GFD-qm-wjj"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="D0s-Je-8nq" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <tapGestureRecognizer id="djj-hS-11F">
+                    <connections>
+                        <action selector="onImagePress:" destination="1qO-IR-TQv" id="qVq-U2-LKL"/>
+                    </connections>
+                </tapGestureRecognizer>
+            </objects>
+            <point key="canvasLocation" x="1605" y="383"/>
+        </scene>
+        <!--Profile-->
+        <scene sceneID="5cK-or-wvQ">
+            <objects>
+                <viewController id="apz-VQ-V96" customClass="ProfileViewController" customModule="Instagram2" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="NyQ-XB-QfK"/>
+                        <viewControllerLayoutGuide type="bottom" id="kXx-EP-caJ"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="Ctg-Ok-763">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    </view>
+                    <tabBarItem key="tabBarItem" title="Profile" id="Z8Y-7f-C5s"/>
+                    <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina4"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="skB-ie-jaA" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1942" y="383"/>
+        </scene>
+        <!--Home-->
         <scene sceneID="TYb-yM-d9N">
             <objects>
-                <viewController id="lyj-GL-pES" sceneMemberID="viewController">
+                <viewController id="lyj-GL-pES" customClass="PhotosViewController" customModule="Instagram2" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="scq-oJ-Skx"/>
                         <viewControllerLayoutGuide type="bottom" id="FOV-Xy-oP4"/>
@@ -66,13 +140,67 @@
                     <view key="view" contentMode="scaleToFill" id="QLC-4N-vPA">
                         <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="271" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="bEv-dT-JHh">
+                                <rect key="frame" x="0.0" y="0.0" width="320" height="519"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <prototypes>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="271" id="iXm-1k-06T">
+                                        <rect key="frame" x="0.0" y="28" width="320" height="271"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="iXm-1k-06T" id="PxY-6o-H4R">
+                                            <rect key="frame" x="0.0" y="0.0" width="320" height="270"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="ZDX-5E-4MR">
+                                                    <rect key="frame" x="4" y="8" width="312" height="181"/>
+                                                </imageView>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" misplaced="YES" text="Caption" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="dJh-bp-AVo">
+                                                    <rect key="frame" x="8" y="197" width="60" height="21"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
+                                            <constraints>
+                                                <constraint firstItem="dJh-bp-AVo" firstAttribute="leading" secondItem="ZDX-5E-4MR" secondAttribute="leading" id="dkd-df-jNS"/>
+                                                <constraint firstAttribute="bottom" relation="greaterThanOrEqual" secondItem="dJh-bp-AVo" secondAttribute="bottom" constant="12" id="uCR-Gw-qfQ"/>
+                                            </constraints>
+                                        </tableViewCellContentView>
+                                    </tableViewCell>
+                                </prototypes>
+                            </tableView>
+                        </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     </view>
+                    <tabBarItem key="tabBarItem" title="Home" id="oYx-XK-rpE"/>
                     <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina4"/>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="6Pi-4L-beb" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="662" y="389"/>
+            <point key="canvasLocation" x="1253" y="383"/>
+        </scene>
+        <!--Tab Bar Controller-->
+        <scene sceneID="IlY-kD-nmC">
+            <objects>
+                <tabBarController storyboardIdentifier="TabBarController" automaticallyAdjustsScrollViewInsets="NO" id="J8p-wi-KXT" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <tabBar key="tabBar" contentMode="scaleToFill" id="I0f-nm-FTN">
+                        <autoresizingMask key="autoresizingMask"/>
+                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                    </tabBar>
+                    <connections>
+                        <segue destination="lyj-GL-pES" kind="relationship" relationship="viewControllers" id="kCy-OT-bbA"/>
+                        <segue destination="1qO-IR-TQv" kind="relationship" relationship="viewControllers" id="DX4-tC-gmX"/>
+                        <segue destination="apz-VQ-V96" kind="relationship" relationship="viewControllers" id="Oeu-4T-j3N"/>
+                    </connections>
+                </tabBarController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="5dA-T0-pRm" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="902" y="383"/>
         </scene>
     </scenes>
+    <inferredMetricsTieBreakers>
+        <segue reference="GFD-qm-wjj"/>
+    </inferredMetricsTieBreakers>
 </document>
